--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "checkmm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "output-cpp": "clang-format cpp/checkmm.cpp > output/checkmm.cpp"
   },
   "repository": {
     "type": "git",
