--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "checkmm.js",
   "scripts": {
-    "output-cpp": "clang-format cpp/checkmm.cpp > output/checkmm.cpp"
+    "output-cpp": "clang-format cpp/checkmm.cpp > output/checkmm.cpp",
+    "build": "ts-node transpiler/index.ts"
   },
   "repository": {
     "type": "git",
@@ -14,5 +15,10 @@
   "license": "CC0-1.0",
   "bugs": {
     "url": "https://github.com/Antony74/checkmm-ts/issues"
+  },
+  "dependencies": {
+    "@types/node": "^17.0.23",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
