Remove const and inline statements from C++ as these are just nice optimisations with no direct analog in TypeScript.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "checkmm.js",
   "scripts": {
-    "output-cpp": "clang-format cpp/checkmm.cpp > output/checkmm.cpp",
+    "output-cpp": "sed 's/[[:<:]]const[[:>:]]//g' cpp/checkmm.cpp | sed 's/[[:<:]]inline[[:>:]]//g' | clang-format > output/checkmm.cpp",
     "transpile": "ts-node transpiler/index.ts && clang-format output/checkmm_ugly.cpp > output/checkmm.cpp"
   },
   "repository": {
