And make this thing runnable (unsurprising it doesn't quite work yet)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "checkmm.js",
   "scripts": {
     "play": "ts-node play.ts",
+    "start": "ts-node src/checkmm.ts",
     "test": "jest"
   },
   "repository": {
