Non-mutating reverse

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "checkmm.js",
   "scripts": {
     "play": "ts-node play.ts",
+    "set.mm": "ts-node src/checkmm.ts set.mm",
     "start": "ts-node src/checkmm.ts",
     "test": "jest"
   },
