--- a/package.json
+++ b/package.json
@@ -17,17 +17,15 @@
   "bugs": {
     "url": "https://github.com/Antony74/checkmm-ts/issues"
   },
-  "dependencies": {
-    "@types/node": "^17.0.23",
-    "prettier": "^2.6.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
-  },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@jest/globals": "^28.0.2",
-    "jest": "^28.0.2"
+    "jest": "^28.0.2",
+    "prettier": "^2.6.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "prettier": {
     "semi": true,
