--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "checkmm.js",
   "scripts": {
+    "build": "webpack --mode production",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "metamath-test": "ts-node test/metamath-test.ts",
     "set.mm": "ts-node src/checkmm.ts set.mm",
@@ -29,8 +30,11 @@
     "eslint": "^8.15.0",
     "jest": "^28.0.2",
     "prettier": "^2.6.2",
+    "ts-loader": "^9.3.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   },
   "prettier": {
     "semi": true,
