Correct cli program

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "checkmm.js",
-  "bin": "dist/checkmm.js",
+  "bin": "cli.js",
   "scripts": {
     "build": "webpack --mode production",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
