--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "metamath-test": "ts-node test/metamath-test.ts",
     "set.mm": "ts-node src/checkmm.ts set.mm",
     "start": "ts-node src/checkmm.ts",
+    "time": "npm run build && time node cli.js set.mm",
     "test": "jest"
   },
   "repository": {
