--- a/package.json
+++ b/package.json
@@ -1,50 +1,48 @@
 {
-  "name": "checkmm",
-  "version": "1.1.0",
-  "description": "",
-  "main": "dist/checkmm.js",
-  "bin": "cli.js",
-  "scripts": {
-    "build": "webpack --mode production",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "metamath-test": "ts-node test/metamath-test.ts",
-    "set.mm": "ts-node src/checkmm.ts set.mm",
-    "start": "ts-node src/checkmm.ts",
-    "time": "npm run build && time node cli.js set.mm",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Antony74/checkmm-ts.git"
-  },
-  "author": "Antony74",
-  "license": "CC0-1.0",
-  "bugs": {
-    "url": "https://github.com/Antony74/checkmm-ts/issues"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
-    "@jest/globals": "^28.0.2",
-    "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "^8.15.0",
-    "jest": "^28.0.2",
-    "prettier": "^2.6.2",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
-  },
-  "prettier": {
-    "semi": true,
-    "singleQuote": true,
-    "printWidth": 120,
-    "tabWidth": 4,
-    "trailingComma": "all",
-    "arrowParens": "avoid"
-  },
-  "dependencies": {}
+    "name": "checkmm",
+    "version": "1.1.0",
+    "description": "",
+    "main": "dist/checkmm.js",
+    "bin": "cli.js",
+    "scripts": {
+        "build": "tsc",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "metamath-test": "ts-node test/metamath-test.ts",
+        "set.mm": "ts-node src/checkmm.ts set.mm",
+        "start": "ts-node src/checkmm.ts",
+        "time": "npm run build && time node cli.js set.mm",
+        "test": "jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Antony74/checkmm-ts.git"
+    },
+    "author": "Antony74",
+    "license": "CC0-1.0",
+    "bugs": {
+        "url": "https://github.com/Antony74/checkmm-ts/issues"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
+        "@jest/globals": "^28.0.2",
+        "@types/node": "^17.0.23",
+        "@typescript-eslint/eslint-plugin": "^5.23.0",
+        "@typescript-eslint/parser": "^5.23.0",
+        "eslint": "^8.15.0",
+        "jest": "^28.0.2",
+        "prettier": "^2.6.2",
+        "ts-loader": "^9.3.0",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.4"
+    },
+    "prettier": {
+        "semi": true,
+        "singleQuote": true,
+        "printWidth": 120,
+        "tabWidth": 4,
+        "trailingComma": "all",
+        "arrowParens": "avoid"
+    },
+    "dependencies": {}
 }
