--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bin": "cli.js",
     "scripts": {
         "build": "tsc",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "lint": "eslint .",
         "metamath-test": "ts-node test/metamath-test.ts",
         "metamath-test-no-update": "ts-node test/metamath-test.ts --no-update",
         "set.mm": "ts-node src/checkmm.ts set.mm",
@@ -26,16 +26,19 @@
     "devDependencies": {
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-typescript": "^7.16.7",
+        "@eslint/js": "^9.8.0",
         "@jest/globals": "^28.0.2",
         "@types/node": "^17.0.23",
-        "@typescript-eslint/eslint-plugin": "^5.23.0",
-        "@typescript-eslint/parser": "^5.23.0",
-        "eslint": "^8.15.0",
+        "@typescript-eslint/eslint-plugin": "^8.0.1",
+        "@typescript-eslint/parser": "^8.0.1",
+        "eslint": "^9.8.0",
+        "globals": "^15.9.0",
         "jest": "^28.0.2",
         "prettier": "^2.6.2",
         "ts-loader": "^9.3.0",
         "ts-node": "^10.7.0",
-        "typescript": "^4.6.4"
+        "typescript": "^4.6.4",
+        "typescript-eslint": "^8.0.1"
     },
     "prettier": {
         "semi": true,
@@ -44,6 +47,5 @@
         "tabWidth": 4,
         "trailingComma": "all",
         "arrowParens": "avoid"
-    },
-    "dependencies": {}
+    }
 }
