--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "eslint .",
         "metamath-test": "ts-node test/metamath-test.ts",
         "metamath-test-no-update": "ts-node test/metamath-test.ts --no-update",
+        "prettier": "prettier --write .",
         "set.mm": "ts-node src/checkmm.ts set.mm",
         "start": "ts-node src/checkmm.ts",
         "time": "npm run build && time node cli.js set.mm",
@@ -34,7 +35,7 @@
         "eslint": "^9.8.0",
         "globals": "^15.9.0",
         "jest": "^28.0.2",
-        "prettier": "^2.6.2",
+        "prettier": "^3.3.3",
         "ts-loader": "^9.3.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4",
