--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "prettier": "prettier --write .",
         "set.mm": "ts-node src/checkmm.ts set.mm",
         "start": "ts-node src/checkmm.ts",
-        "time": "npm run build && time node cli.js set.mm",
+        "time": "npm run build && node cli.js set.mm | gnomon",
         "test": "jest"
     },
     "repository": {
@@ -33,6 +33,7 @@
         "@typescript-eslint/parser": "^8.0.1",
         "eslint": "^9.8.0",
         "globals": "^15.9.0",
+        "gnomon": "^1.4.6",
         "jest": "^29.7.0",
         "prettier": "^3.3.3",
         "ts-node": "^10.9.2",
