--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "metamath-test-no-update": "ts-node test/metamath-test.ts --no-update",
         "prettier": "prettier --write .",
         "set.mm": "ts-node src/checkmm.ts set.mm",
+        "get-set.mm": "curl -L https://github.com/metamath/set.mm/raw/refs/heads/develop/set.mm -O",
         "start": "ts-node src/checkmm.ts",
         "time": "npm run build && node cli.js set.mm | gnomon",
         "test": "jest"
@@ -36,7 +37,7 @@
         "eslint": "^9.35.0",
         "globals": "^16.4.0",
         "gnomon": "^1.4.6",
-        "jest": "^29.7.0",
+        "jest": "^30.1.3",
         "prettier": "^3.6.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.2",
