--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "cpp-build": "g++ cpp/checkmm.cpp -o checkmmc -O3 -funroll-loops -finline-functions -fomit-frame-pointer -Wall -pedantic",
         "cpp-build-debug": "g++ cpp/checkmm.cpp -o checkmmc -g -O0 -Wall -pedantic",
         "cpp-run": "./checkmmc set.mm",
+        "cpp-sample": "sample checkmmc 5 100 -file profile.txt",
         "build": "tsc",
         "lint": "eslint .",
         "metamath-test": "ts-node test/metamath-test.ts",
