Make profiling (on Mac) more convenient

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "cpp-build": "g++ cpp/checkmm.cpp -o checkmmc -O3 -funroll-loops -finline-functions -fomit-frame-pointer -Wall -pedantic",
         "cpp-build-debug": "g++ cpp/checkmm.cpp -o checkmmc -g -O0 -Wall -pedantic",
         "cpp-run": "./checkmmc set.mm",
-        "cpp-sample": "sample checkmmc 5 100 -file profile.txt",
+        "cpp-sample": "concurrently './checkmmc set.mm' 'sample checkmmc 100 100 -mayDie -file profile.txt'",
         "build": "tsc",
         "lint": "eslint .",
         "metamath-test": "ts-node test/metamath-test.ts",
@@ -36,6 +36,7 @@
         "@types/node": "^24.5.2",
         "@typescript-eslint/eslint-plugin": "^8.0.1",
         "@typescript-eslint/parser": "^8.0.1",
+        "concurrently": "^9.2.1",
         "eslint": "^9.35.0",
         "globals": "^16.4.0",
         "gnomon": "^1.4.6",
