Spellcheck and update README.md for the c++

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,40 @@
 {
-    "cSpell.enabled": false,
+    "cSpell.allowCompoundWords": true,
+    "cSpell.enabled": true,
+    "cSpell.ignoreRegExpList": ["/\\b[A-Z]+\\b/g"],
+    "cSpell.words": [
+        "anatomymm",
+        "checkmm",
+        "checkmmc",
+        "containsonlyupperorq",
+        "Deque",
+        "disjvar",
+        "disjvars",
+        "dset",
+        "dvars",
+        "fomit",
+        "Frege",
+        "hypvec",
+        "isactivehyp",
+        "isactivevariable",
+        "isalnum",
+        "isdvr",
+        "ismathsymboltoken",
+        "ismmws",
+        "isupper",
+        "justgotnum",
+        "labelt",
+        "mandhypt",
+        "mmfilenamesalreadyencountered",
+        "mpdb",
+        "parsef",
+        "parsev",
+        "readtokenstofileinclusion",
+        "thlabel",
+        "vari",
+        "wffs",
+        "wnew"
+    ],
     "files.associations": {
         "__hash_table": "cpp",
         "__split_buffer": "cpp",
